--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="./src/assets/logo.png" />
+  <link rel="icon" href="./src/assets/dhwani-favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <meta property="og:type" content="website">
   <!-- <meta property="og:url" content="https://drishti-campus-ambassador.cet.ac.in/"> -->
   <meta property="og:title" content="Dhwani 2024 | College of Engineering Trivandrum">
-  <meta property="og:description"
-    content="">
+  <meta property="og:description" content="">
 
-  <title>Dhwani CET</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap" rel="stylesheet" />
+  <title>Dhwani'24 CA</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
